Excluding icu from the shadow jar because it's already available in Minecraft. Excluded module-info.

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,11 @@ dependencies {
 
 shadowJar {
     archiveName 'graaljsbundle.jar'
-    relocate 'com.ibm.icu', 'graaljsbundle.com.ibm.icu'
+
     relocate 'org.objectweb.asm', 'graaljsbundle.org.objectweb.asm'
+//    relocate 'com.ibm.icu', 'graaljsbundle.com.ibm.icu'
+
+    exclude 'com/ibm/icu/**'
     exclude 'META-INF/versions/**'
+    exclude 'module-info.class'
 }
